[tool.poetry]
name = "pikpak-l"
version = "0.1.0"
description = ""
authors = ["layne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.10.5"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
