[tool.poetry]
name = "pikpak-l"
version = "0.1.0"
description = ""
authors = ["layne"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.19"
aiohttp = "3.8.4"
opencv-python = "4.6.0.66"
matplotlib = "3.7.1"
ddddocr = "1.4.10"
numpy = "1.23.3"
opencv-python-headless = "4.6.0.66"
rich = "13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
